# django-fastapi-messenger

./: .gitignore  README.md  db.sqlite3  pyproject.toml
conversations/: managers.py  models.py
conversations/api/: router.py  schemas.py
conversations/migrations/: 0001_initial.py  0002_rename_room_message_conversation.py  0003_rename_user_message_sender_remove_conversation_name_and_more.py  0004_alter_conversation_participants.py  0005_alter_message_conversation.py  0006_alter_message_sender.py
server/: asgi.py  settings.py  urls.py
users/: admin.py  forms.py
users/migrations/: 0001_initial.py
